Added type field to the web ui event display

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 				<div class="col-md-6">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							Outages
+							Events
 						</div>
 						<div class="panel-body">
 							<button type="button" class="btn btn-default" id="refresh-events">
@@ -62,7 +62,7 @@
 							</button>
 						</div>
 						<table class="table" id="events-table">
-							<thead><th>Time</th><th>State</th></thead>
+							<thead><th>Time</th><th>Type</th><th>State</th></thead>
 							<tbody></tbody>
 						</table>
 					</div>
